@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.1
 
+ - [ZBX-1633] fixed sysmaps in PostgreSQL upgrade patch (Sasha)
  - [ZBX-1617] fixed triggers duplicating in template linking for discovered hosts (Sasha)
  - [ZBX-1840] fixed bad performance of the node synchronization - fixed database index (Sasha)
  - [ZBX-1742] fixed processing of "system.uptime" check under Windows to return values as integers (Dmitry)
